src/tests/snapshots/cendol__tests__pp_builtins__redefine_builtin_macro_should_fail.snap
---
source: src/tests/pp_builtins.rs
expression: "(tokens, diags)"
---
- - kind: Identifier
    text: const
  - kind: Identifier
    text: char
  - kind: Star
    text: "*"
  - kind: Identifier
    text: s
  - kind: Assign
    text: "="
  - kind: StringLiteral
    text: "\"Jan 28 2026\""
  - kind: Semicolon
    text: ;
- - "Warning: Redefinition of built-in macro '__DATE__'"
