src/tests/snapshots/cendol__tests__pp_builtins__undef_builtin_macro_should_fail.snap
---
source: src/tests/pp_builtins.rs
expression: "(tokens, diags)"
---
- - kind: Identifier
    text: int
  - kind: Identifier
    text: x
  - kind: Assign
    text: "="
  - kind: Number
    text: "1"
  - kind: Semicolon
    text: ;
- - "Warning: Undefining built-in macro '__DATE__'"
